---
source: src/emit/ops/cfg.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i8 @_hl.main.1(i8 %0, i8 %1) {
alloca_block:
  %"0" = alloca i8, align 1
  %"2_0" = alloca i8, align 1
  %"2_1" = alloca i8, align 1
  %"4_0" = alloca i8, align 1
  %"7_0" = alloca i8, align 1
  %"7_1" = alloca i8, align 1
  %"03" = alloca i8, align 1
  %"11_0" = alloca i8, align 1
  %"11_1" = alloca i8, align 1
  %"9_0" = alloca { { i8, i8 } }, align 8
  %"13_0" = alloca { i32, { i8 }, {} }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i8 %0, i8* %"2_0", align 1
  store i8 %1, i8* %"2_1", align 1
  %"2_01" = load i8, i8* %"2_0", align 1
  %"2_12" = load i8, i8* %"2_1", align 1
  store i8 %"2_01", i8* %"7_0", align 1
  store i8 %"2_12", i8* %"7_1", align 1
  br label %2

2:                                                ; preds = %14, %entry_block
  %"7_04" = load i8, i8* %"7_0", align 1
  %"7_15" = load i8, i8* %"7_1", align 1
  store i8 %"7_04", i8* %"7_0", align 1
  store i8 %"7_15", i8* %"7_1", align 1
  %"7_06" = load i8, i8* %"7_0", align 1
  %"7_17" = load i8, i8* %"7_1", align 1
  %3 = insertvalue { i8, i8 } undef, i8 %"7_06", 0
  %4 = insertvalue { i8, i8 } %3, i8 %"7_17", 1
  %5 = insertvalue { { i8, i8 } } poison, { i8, i8 } %4, 0
  store { { i8, i8 } } %5, { { i8, i8 } }* %"9_0", align 1
  %"9_08" = load { { i8, i8 } }, { { i8, i8 } }* %"9_0", align 1
  store { { i8, i8 } } %"9_08", { { i8, i8 } }* %"9_0", align 1
  %"9_09" = load { { i8, i8 } }, { { i8, i8 } }* %"9_0", align 1
  switch i32 0, label %6 [
  ]

6:                                                ; preds = %2
  %7 = extractvalue { { i8, i8 } } %"9_09", 0
  %8 = extractvalue { i8, i8 } %7, 0
  %9 = extractvalue { i8, i8 } %7, 1
  store i8 %8, i8* %"11_0", align 1
  store i8 %9, i8* %"11_1", align 1
  br label %10

10:                                               ; preds = %6
  %"11_011" = load i8, i8* %"11_0", align 1
  %"11_112" = load i8, i8* %"11_1", align 1
  store i8 %"11_011", i8* %"11_0", align 1
  store i8 %"11_112", i8* %"11_1", align 1
  %"11_013" = load i8, i8* %"11_0", align 1
  %11 = insertvalue { i8 } undef, i8 %"11_013", 0
  %12 = insertvalue { i32, { i8 }, {} } { i32 0, { i8 } poison, {} poison }, { i8 } %11, 1
  store { i32, { i8 }, {} } %12, { i32, { i8 }, {} }* %"13_0", align 4
  %"13_014" = load { i32, { i8 }, {} }, { i32, { i8 }, {} }* %"13_0", align 4
  %"11_115" = load i8, i8* %"11_1", align 1
  store { i32, { i8 }, {} } %"13_014", { i32, { i8 }, {} }* %"13_0", align 4
  store i8 %"11_115", i8* %"11_1", align 1
  %"13_016" = load { i32, { i8 }, {} }, { i32, { i8 }, {} }* %"13_0", align 4
  %"11_117" = load i8, i8* %"11_1", align 1
  %13 = extractvalue { i32, { i8 }, {} } %"13_016", 0
  switch i32 %13, label %14 [
    i32 1, label %17
  ]

14:                                               ; preds = %10
  %15 = extractvalue { i32, { i8 }, {} } %"13_016", 1
  %16 = extractvalue { i8 } %15, 0
  store i8 %16, i8* %"7_0", align 1
  store i8 %"11_117", i8* %"7_1", align 1
  br label %2

17:                                               ; preds = %10
  %18 = extractvalue { i32, { i8 }, {} } %"13_016", 2
  store i8 %"11_117", i8* %"03", align 1
  br label %19

19:                                               ; preds = %17
  %"010" = load i8, i8* %"03", align 1
  store i8 %"010", i8* %"4_0", align 1
  %"4_018" = load i8, i8* %"4_0", align 1
  store i8 %"4_018", i8* %"0", align 1
  %"019" = load i8, i8* %"0", align 1
  ret i8 %"019"
}
